maquetado de los charts y las tablas

--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -1,5 +1,6 @@
-<!-- chart -->
-<div class="chart-container">
+<div class="grid">
+  <!-- chart -->
+  <div class="chart-container">
     <div class="titulo-chart">
       <h2>Total descontinuados marcas</h2>
     </div>
@@ -9,9 +10,8 @@
   </div>
   <!-- fin chart -->
 
-
-<!-- tabla descontinuados -->
-<div class="table-container">
+  <!-- tabla descontinuados -->
+  <div class="table-container">
     <h2>Categorías con mayor cambio - Descontinuados</h2>
     <p>Comparación mes a mes</p>
     <table>
@@ -31,58 +31,59 @@
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Pantalon</td>
           <td data-label="Cantidad descontinuados">200</td>
-          <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
+          <td data-label="Diferencia" style="color: green">88,69% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Vestido</td>
           <td data-label="Cantidad descontinuados">300</td>
-          <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
+          <td data-label="Diferencia" style="color: green">66,50% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Camisa</td>
           <td data-label="Cantidad descontinuados">500</td>
-          <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
+          <td data-label="Diferencia" style="color: green">46,94% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Sandalias</td>
           <td data-label="Cantidad descontinuados">600</td>
-          <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
+          <td data-label="Diferencia" style="color: green">67,02% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Zapatos</td>
           <td data-label="Cantidad descontinuados">7000</td>
-          <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
+          <td data-label="Diferencia" style="color: green">34,43% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Tenis</td>
           <td data-label="Cantidad descontinuados">800</td>
-          <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
+          <td data-label="Diferencia" style="color: green">34,08% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Accesorios</td>
           <td data-label="Tipo de prenda">Accesorios</td>
           <td data-label="Cantidad descontinuados">900</td>
-          <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
+          <td data-label="Diferencia" style="color: green">132,93% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Top</td>
           <td data-label="Cantidad descontinuados">700</td>
-          <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
+          <td data-label="Diferencia" style="color: green">132,93% ↑</td>
         </tr>
       </tbody>
     </table>
   </div>
   <!-- Fin tabla descontinuados -->
+</div>
