--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -1,4 +1,5 @@
-<!-- chart descuento promedio -->
+<div class="grid">
+  <!-- chart descuento promedio -->
 <div class="chart-container">
   <div class="titulo-chart">
     <h2>Descuento promedio marcas</h2>
@@ -84,3 +85,5 @@
   </table>
 </div>
 <!-- Fin tabla descuento promedio -->
+
+</div>
