--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -1,6 +1,6 @@
-
-<!-- chart -->
-<div class="chart-container">
+<div class="grid">
+  <!-- chart -->
+  <div class="chart-container">
     <div class="titulo-chart">
       <h2>Novedades comparacion marcas</h2>
     </div>
@@ -10,8 +10,8 @@
   </div>
   <!-- fin chart -->
 
-<!-- tabla recien llegados -->
-<div class="table-container">
+  <!-- tabla recien llegados -->
+  <div class="table-container">
     <h2>Categorías con mayor cambio - Recien llegados</h2>
     <p>Comparación mes a mes</p>
     <table>
@@ -31,58 +31,59 @@
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Pantalon</td>
           <td data-label="Los recién llegados">65.722</td>
-          <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
+          <td data-label="Diferencia" style="color: green">88,69% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Vestido</td>
           <td data-label="Los recién llegados">1.048.929</td>
-          <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
+          <td data-label="Diferencia" style="color: green">66,50% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Camisa</td>
           <td data-label="Los recién llegados">116.939</td>
-          <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
+          <td data-label="Diferencia" style="color: green">46,94% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Sandalias</td>
           <td data-label="Los recién llegados">1.316.074</td>
-          <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
+          <td data-label="Diferencia" style="color: green">67,02% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Zapatos</td>
           <td data-label="Los recién llegados">92.419</td>
-          <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
+          <td data-label="Diferencia" style="color: green">34,43% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Calzado</td>
           <td data-label="Tipo de prenda">Tenis</td>
           <td data-label="Los recién llegados">281.374</td>
-          <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
+          <td data-label="Diferencia" style="color: green">34,08% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Accesorios</td>
           <td data-label="Tipo de prenda">Accesorios</td>
           <td data-label="Los recién llegados">7.006</td>
-          <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
+          <td data-label="Diferencia" style="color: green">132,93% ↑</td>
         </tr>
         <tr>
           <td data-label="Categoría">Mujeres</td>
           <td data-label="Subcategoría">Ropa</td>
           <td data-label="Tipo de prenda">Top</td>
           <td data-label="Los recién llegados">18.547</td>
-          <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
+          <td data-label="Diferencia" style="color: green">132,93% ↑</td>
         </tr>
       </tbody>
     </table>
   </div>
-  <!-- Fin tabla recien llegados --> 
+  <!-- Fin tabla recien llegados -->
+</div>
