cambios en las tarjetas informativas

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -124,7 +124,7 @@
             <!--todo hacer dinamico el precio y el porcentaje -->
             <p class="card-p">Precio</p>
             <p class="">promedio</p>
-            <p>$ {{averagePrice}}</p>
+            <p>$ {{currency1}}</p>
             <p>+ 0,39%</p>
             <p>Que el mes pasado</p>
           </div>
