Se implementa el boton web scraping funcionando

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -21,6 +21,9 @@
                         <a class="nav-link" [routerLink]="['/informes']">Informes</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
+                        <a class="nav-link" style="cursor: pointer;" (click)="getScraping()">Web Scraping</a>
+                    </li>
+                    <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" [routerLink]="['/newImage']">Subir imagen</a>
                     </li>
                     <li class="nav-item">
