Se agregan cosas faltantes al front y metodos

--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -12,7 +12,15 @@
 
   <!-- tabla descontinuados -->
   <div class="table-container">
-    <h2>Categorías con mayor cambio - Descontinuados</h2>
+    <h2>Categorías con mayor cambio - Descontinuados <svg xmlns="http://www.w3.org/2000/svg" width="16" heigth="16"
+      xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+      viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill: rgb(255, 87, 87);" role="img"
+      aria-label="Illustration of a Funnel">
+      <g id="__id33_ssutzzo1g">
+        <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+          style="fill: inherit"></path>
+      </g>
+    </svg></h2>
     <p>Comparación mes a mes</p>
     <table>
       <thead>
