--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -15,9 +15,9 @@
   <table class="w">
     <thead>
       <tr>
-        <th>Categoría</th>
-        <th>Subcategoría</th>
-        <th>Tipo de prenda</th>
+        <th>Categoría<img src="./assets/redtri.png" alt="" class="redtri" /></th>
+        <th>Subcategoría<img src="./assets/redtri.png" alt="" class="redtri" /></th>
+        <th>Tipo de prenda<img src="./assets/redtri.png" alt="" class="redtri" /></th>
         <th>SKU</th>
         <th>Precio promedio</th>
         <th>Nueva llegada</th>
