--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -138,7 +138,7 @@
             />
             <p class="card-p">Descuento</p>
             <p class="">promedio</p>
-            <p>100 %</p>
+            <p> {{totalDiscount}}% </p>
             <p>- 0,55%</p>
             <p>Que el mes pasado</p>
           </div>
@@ -147,7 +147,7 @@
           <div class="card">
             <img src="../../../assets/new.png" class="Capa_1" alt="new" />
             <p class="">Recien llegados</p>
-            <p>15.000</p>
+            <p> {{totalNew}} </p>
             <p>- 0,5%</p>
             <p>Que el mes pasado</p>
           </div>
