se implementa la funcion de sku

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -164,9 +164,8 @@
         <div class="column">
           <div class="card">
             <img src="../../../assets/sku.png" class="Capa_1" alt="sku" />
-            <p class="">Total</p>
-            <p class="">SKU</p>
-            <p>$ 250.000</p>
+            <p class="">Total SKU</p>
+            <p>{{totalsku}}</p>
             <p>+ 0,39%</p>
             <p>Que el mes pasado</p>
           </div>
