Se implementa tabla dinámica con filtro y paginado

--- a/src/app/components/image-detail/image-detail.component.html
+++ b/src/app/components/image-detail/image-detail.component.html
@@ -35,13 +35,47 @@
                                                 {{photo.origin}} </p>
                                             <p class="card-text"> <span class="label-bold">Colección: </span>
                                                 {{photo.quarter}} </p>
-                                            <p class="card-text"> <span class="label-bold">Género:
+                                            <p class="card-text"> <span class="label-bold">Categoría:
                                                 </span>{{photo.gender}}</p>
+                                            <p class="card-text"> <span class="label-bold">Subcategoría: </span>
+                                                {{photo.x}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Tipo de prenda: </span>
+                                                {{photo.categoria}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Nombre: </span>
+                                                {{photo.imageName}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Precio: </span>
+                                                {{photo.precio}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Precio final promoción:
+                                                </span>
+                                                {{photo.descuento}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Tallas: </span>
+                                                {{photo.talla}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Color: </span>
+                                                {{photo.color}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Características: </span>
+                                                {{photo.caracteristicas}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Materiales: </span>
+                                                {{photo.materiales}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Estado: </span>
+                                                {{photo.tag}}
+                                            </p>
+                                            <p class="card-text"> <span class="label-bold">Uso: </span>
+                                                {{photo.use}}
+                                            </p>
                                         </li>
                                     </ul>
                                 </li>
                             </ul>
-
+                            <!--
                             <ul class="list-unstyled components ">
                                 <li class="active">
                                     <h4 class="card-title title-submenu">
@@ -51,31 +85,12 @@
                                     </h4>
                                     <ul class="collapse list-unstyled" id="prendaInfo">
                                         <li>
-                                            <p class="card-text"> <span class="label-bold">tipo de prenda: </span> 
-                                                {{photo.categoria}}
-                                            </p>
-                                            <p class="card-text"> <span class="label-bold">Nombre: </span>
-                                                {{photo.imageName}}
-                                            </p>
-                                            <p class="card-text"> <span class="label-bold">Precio: </span>
-                                                {{photo.precio}} 
-                                            </p>
-                                            <p class="card-text"> <span class="label-bold">Precio final promocion: </span>
-                                                {{photo.descuento}} 
-                                            </p> 
-                                            <p class="card-text"> <span class="label-bold">Características: </span>
-                                                {{photo.caracteristicas}} 
-                                            </p>       
-                                            <p class="card-text"> <span class="label-bold">Uso: </span>
-                                                {{photo.use}}
-                                            </p>      
-                                            <p class="card-text"> <span class="label-bold">Origen: </span>
-                                                {{photo.origin}}
-                                            </p>                                            
+
                                         </li>
                                     </ul>
                                 </li>
-                            </ul>                            
+                            </ul>
+                            -->
 
                             <ul class="list-unstyled components ">
                                 <li class="active">
