--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -1,118 +1,115 @@
 /* Tablas */
+.mat-form-field {
+  width: 100%;
+  font-size: 14px;
+  margin: 0 auto;
+}
+
 .table-container {
-    width: 100%;
-    max-width: 700px;
-    margin: auto;
-  }
-  
-  .table-container-sku {
-    width: 100%;
-    max-width: 1600px;
-    margin: auto;
-  }
-  
-  .table-container-tipoP {
-    width: 100%;
-    max-width: 1600px;
-    margin: auto;
-  }
-  
+  width: 100%;
+  max-width: 700px;
+  margin: auto;
+}
+
+.tabletitle {
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
+
+table {
+  width: 100%;
+  background-color: white;
+  border-collapse: collapse;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  table-layout: fixed;
+}
+
+th,
+td {
+  padding: 7px;
+}
+
+thead {
+  background-color: #cecece;
+  border-bottom: solid 1px #919090;
+  color: #000000;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+tr:hover td {
+  background-color: rgba(230, 97, 57, 0.987);
+  color: white;
+}
+
+/* Responsive tables*/
+@media screen and (max-width: 600px) {
   table {
-    width: 100%;
-    background-color: white;
-    border-collapse: collapse;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    table-layout: fixed;
-  }
-  
-  th, td{
-    padding: 7px;
-  }
-  
-  thead{
-    background-color: #cecece;
-    border-bottom: solid 1px #919090;
-    color: #000000;
-  }
-  
-  tr:nth-child(even){
-    background-color: #ddd;
-  }
-  
-  tr:hover td{
-    background-color: rgba(230, 97, 57, 0.987);
-    color: white;
-  }
-  
-  .dif {
-    color: green;
-  }
-  
-  /* Responsive tables*/
-  @media screen and (max-width: 600px) {
-    table {
-      border: 0px;
-    }
-  
-    thead {
-      display: none;
-    }
-  
-    tr {
-      margin-bottom: 8px;
-      display: block;
-    }
-  
-    td {
-      text-align: right;
-      display: block;
-    }
-  
-    td:last-child {
-      border-bottom: 0px;
-    }
-  
-    td::before {
-      content: attr(data-label);
-      font-weight: bold;
-      float: left;
-    }
-  }
-  /* Fin Tablas */
-
-  /* inicio estilos chart */
-
-  .chart-container {
-    width: 100%;
-  }
-  
-  .chart-line {
-    width: 90%;
-  }
-  
-  .titulo-chart {
-    text-align: center;
+    border: 0px;
   }
 
-  /* fin chart */
+  th {
+    display: none;
+  }
+
+  tr {
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  td {
+    text-align: right;
+    display: block;
+  }
+
+  td:last-child {
+    border-bottom: 0px;
+  }
+
+  td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    float: left;
+  }
+}
+/* Fin Tablas */
+
+/* inicio estilos chart */
+
+.chart-container {
+  width: 100%;
+}
+
+.chart-line {
+  width: 90%;
+}
+
+.titulo-chart {
+  text-align: center;
+}
+
+/* fin chart */
 
 
-  /* grid para poner las cosas en una sola fila */
+/* grid para poner las cosas en una sola fila */
 
+.grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+}
+
+
+
+/* media queryes */
+
+@media (max-width: 1000px) {
   .grid {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    align-items: center;
+    display: block;
   }
-
-
-
-  /* media queryes */
-
-  @media (max-width: 1000px) {
-    .grid {
-      display: block;
-    }
-  }
+}
