--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -175,7 +175,7 @@
     </div>
 
     
-    <app-informe-precio></app-informe-precio>
+    <!-- <app-informe-precio></app-informe-precio>
     <br>
     <br>
     <hr>
@@ -202,7 +202,8 @@
     <hr>
     <br>
 
-   <app-informe-sku></app-informe-sku>       
+   <app-informe-sku></app-informe-sku>        -->
+   <router-outlet></router-outlet>
 
     <br>
     <br>
