--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                         <a class="nav-link inicioReload" href="/#/dashboard" (click)="inicio()">Inicio</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" [routerLink]="['/informes']">Informes</a>
+                        <a class="nav-link" [routerLink]="['/informes/informePrecios']">Informes</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" style="cursor: pointer;" (click)="getScraping()">Web Scraping</a>
