Se cambian los iconos de las Cards

--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -2,7 +2,7 @@
   <div class="chart-container">
     <div class="titulo-chart">
       <h2>Precio promedio marcas</h2>
-      <select type="" class="form-control col-md-2" >
+      <select type="" class="form-control col-md-2">
         <option value="mes">Mes</option>
         <option value="year">Año</option>
       </select>
@@ -64,4 +64,32 @@
 
   </div>
 
+  <!--
+  <div class="table-container">
+    <h2>Categorías con mayor cambio - Precio promedio</h2>
+    <p>Comparación mes a mes</p>
+    
+    <table>
+
+      <thead>
+        <tr>
+          <th>Categoria</th>
+          <th>Subcategoría</th>
+          <th>Tipo de prenda</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let photo of photos">
+          <td>{{ photo.categoria }}</td>
+          <td>{{ photo.x }}</td>
+          <td>{{ photo.imageName }}</td>
+        </tr>
+      </tbody>
+      
+
+    </table>
+
+  </div>
+  -->
 </div>
