--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -163,7 +163,7 @@
         </div>
         <div class="column" >
           <div class="card" routerLink="informeSKU" routerLinkActive="activo">
-            <img src="../../../assets/sku.png" class="Capa_1" alt="sku" />
+            <img src="../../../assets/sku.svg" class="Capa_1" alt="sku" />
             <p class="">Total SKU</p>
             <p>{{totalsku}}</p>
             <p class="porcentaje">+ 0,39%</p>
